@@ -76,6 +76,8 @@
     to 437 if current codepage is different. (Wengier)
   - The setting "output=default" will enable the OpenGL
     output for the Linux platform if possible. (Wengier)
+  - Fixed DOS Int21/AH=0x5a "Create temporary file"
+    function not generating unique files. (Wengier)
   - Fixed launching Windows programs when the working
     directory has no 8.3 filename entry. (Wengier)
   - Fixed an issue in MinGW builds that no data will be
